flux/apps/base/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: service-desk
---
apiVersion: v1
kind: Namespace
metadata:
  name: webhook
---
apiVersion: v1
kind: Namespace
metadata:
  name: platform
---
apiVersion: v1
kind: Namespace
metadata:
  name: observability
